tests/baselines/reference/collisionThisExpressionAndClassInGlobal.errors.txt
tests/cases/compiler/collisionThisExpressionAndClassInGlobal.ts(1,7): error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.


==== tests/cases/compiler/collisionThisExpressionAndClassInGlobal.ts (1 errors) ====
    class _this {
          ~~~~~
!!! error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
    }
    var f = () => this;